# alias-mapper

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: alias-tsv-update.yml  ci.yml  full-alias-update-sharded.yml  publish-pypi.yml  shard-throughput-test.yml
docs/: design.md  pipeline-restructure-plan.md
scripts/: _http.py  build_alias_db.py  collect_aliases.py  debug_url.py  md5sum.txt  smoke_real_genomes.py
scripts/ncbi_dataset/data/: assembly_data_report.jsonl  dataset_catalog.json
scripts/ncbi_dataset/data/GCF_000721785.1/: sequence_report.jsonl
src/: alias_mapper.py  alias_source.py  bootstrap.py
src/alias_mapper/: __init__.py  _ssl.py  alias_source.py  bootstrap.py  build_alias_db.py  cli.py
src/alias_mapper/formats/: __init__.py  _io.py  _resolve.py  base.py  fasta.py  gff.py
src/formats/: __init__.py  base.py  fasta.py  gff.py
tests/: conftest.py  test_alias_source.py  test_build_db.py  test_cli_multi.py  test_cli_smoke.py  test_formats.py  test_io.py  test_resolve.py
