[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alias-mapper"
version = "2.0.0"
description = "Translate chromosome/scaffold names in bioinformatics files between naming conventions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Max Reese" },
]
keywords = ["bioinformatics", "genomics", "gff", "fasta", "naming-conventions", "ncbi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "platformdirs>=4.0",
    "certifi",
]

[project.optional-dependencies]
# truststore makes the package use the system keychain for TLS
# verification, which is necessary on networks that do TLS inspection
# (e.g. corporate / institutional networks like CRG's). Harmless
# elsewhere. Install with: pip install alias-mapper[trusted]
trusted = [
    "truststore",
]
# Test dependencies. Install with: pip install -e .[test]
test = [
    "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/guigolab/alias-mapper"
Issues = "https://github.com/guigolab/alias-mapper/issues"

[project.scripts]
alias-mapper = "alias_mapper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["alias_mapper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put src/ on sys.path so `pytest` finds the package without an install
# (CI does `pip install -e .[test]`, but this keeps a bare `pytest` working
# locally too). pythonpath requires pytest >= 7.
pythonpath = ["src"]
